# prism-religious

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  TEST_EXECUTION_REPORT.md  TEST_SUMMARY.md  VERIFICATION_REPORT.md
config/: docker-compose.bible.yaml  docker-compose.prs.yaml
docs/: bible-importer-guide.md
importer/: IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE1_QUICK_REFERENCE.md  README.md  TESTING_QUICK_START.md  TEST_SUMMARY.md  __init__.py  bible_importer.py  book_metadata_exporter.py  cli.py  config.py  csv_parser.py  geography_importer.py  import_missing_greek.py  lexicon_importer.py  prism_client.py  pyproject.toml  requirements.txt  sword_parser.py  test_rag_integration.py  verify-installation.sh  verse_chunker.py
importer/tests/: README.md  __init__.py  conftest.py
importer/tests/fixtures/: malformed_verses.csv  sample_verses.csv
importer/tests/integration/: __init__.py  test_phase2_geography.py  test_phase2_sword.py  test_regression.py  test_search_e2e.py  test_search_quality.py
importer/tests/unit/: __init__.py  test_cli.py  test_config.py  test_csv_parser.py  test_geography_importer.py  test_prism_client.py  test_sword_parser.py  test_verse_chunker.py
research/events/: exodus-journey-research.md  exodus-journey.json  jesus-final-journey-research.md  jesus-final-journey.json  paul-first-journey-research.md  paul-first-journey.json
ui/: README.md  package-lock.json  package.json  vite.config.ts
ui/docker/: Dockerfile
ui/src/: app.css
ui/src/routes/: +page.svelte
ui/static/data/: biblical-events.json
(+14 files in other folders)
